--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-   
+   margin: ;
     font-family: 'Poppins', sans-serif;
 }
 header{
@@ -42,6 +42,7 @@ section{
     font-weight: 500;
 
 }
+
 #top-order-food{
     margin-top: 80px;
  
@@ -68,12 +69,81 @@ section{
 .second-section{
     background-image: url(/images/7.png);
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
+    width: 100%;
+    margin: 0;
+   
 }
 .second-section img{
     position: relative;
-    padding: 0 30 %;
+    padding-left: 30%;
+    
 }
 .second-section-text{
+    margin-top: 100px;
+    padding-right: 150px;
+}
+.second-section-text h1{
+font-weight: 700;
+font-size: 30px;
+}
+
+.second-section-text a{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 20px 40px;
+    border-radius: 100px;
+    margin-top: 30px;
+    color: white;
+    font-weight: 500;
+}
+
+.button{
+    margin-top: 100px;
+}
+
+article{
+    margin-top: 70px;
+    text-align: center;
     
+}
+article h1{
+    font-weight: 600;
+    font-size: 40px;
+}
+.recipie{
+    display: flex;
+    justify-content: center;
+  
+  
+
+}
+.left-recepie{
+    width: 20%;  
+    margin-right: 50px;
+    box-shadow: 10px 10px 40px green;
+    border-radius: 20px;
+    height: 500px;
+    
+}
+.left-recepie img{
+    width: 90%;
+    padding: 5%;
+    
+}
+.left-recepie h1{
+    padding-left: 5%;
+}
+.left-recepie p{
+    padding-left: 5%;
+}
+
+
+.middle-recepie{
+    width: 200px;
+}
+.right-recepie{
+    width: 200px;
+    margin-left: 20px;
 }
