--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ article h1{
 .recipie{
     display: flex;
     justify-content: center;
+    margin-bottom: -110px;
   
   
 
@@ -138,12 +139,39 @@ article h1{
 .left-recepie p{
     padding-left: 5%;
 }
-
-
-.middle-recepie{
-    width: 200px;
+.subscribe-area{
+    display: flex;
+    width: 70%;
+   margin: 15%;
+    box-shadow: 10px 10px 40px green;
+    border-radius: 20px;
+    height: 200px;
+    justify-content: center;
+   
 }
-.right-recepie{
-    width: 200px;
-    margin-left: 20px;
+.sub-area-text{
+    width: 20%;
+    padding: 0 10%;
+    text-align: center;
+}
+.sub-area-text h1{
+    font-size: 50px;
+    margin-bottom: -30px;
+}
+footer{
+    text-align: center;
+    height: 200px;
+    background-color: rgb(41, 37, 37);
+    width: 75%;
+    margin-left: 13%;
+    margin-bottom: 30px;
+    margin-top: -150px;
+
+}
+footer h1{
+    color: whitesmoke;
+    padding-top: 50px;    
+}
+footer small{
+    color: white;
 }
